feat(mc): update to 1.21.5
* use a more aggressive better snow checker